[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvmismatch"
version = { attr = "pvmismatch.__version__" }
description = "PV Mismatch Calculator"
readme = "README.rst"
authors            = [
  { name = "Mark Mikofski", email = "mark.mikofski@sunpowercorp.com" },
]
license = { text = "BSD 3-clause" }
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
]
requires-python = ">=3.7"
keywords           = ["pv", "solar", "mismatch", "engineering"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage   = "https://github.com/SunPower/PVMismatch"
Repository = "https://github.com/SunPower/PVMismatch"

[project.optional-dependencies]
test = [
  "nose>=1.3.7",
  "pytest>=3.2.1",
  "sympy>=1.1.1",
  "pvlib>=0.5.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pvmismatch*",]